<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_height="match_parent"

    tools:context="fr.esiea.android.projet.mobile.MainActivity"
    android:layout_width="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg"
            android:adjustViewBounds="false"
            android:layout_weight="-999" />

        
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:id="@+id/welcomeMsg"
        android:layout_height="wrap_content"
        android:text="@string/messageBienvenue"
        android:fontFamily="sans-serif"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="#99000000"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/openNewActivityButton"
        android:onClick="openNewActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"/>

    <ImageButton
        android:text="@string/beerButton"
        android:src="@drawable/buttonpng"
        android:background="@null"
        android:onClick="openBeerActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:paddingBottom="30dp"
        android:layout_above="@+id/button4"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/credit"
        android:textAlignment="center"
        android:textColor="#CCFFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textSize="10sp"
        android:fontFamily="sans-serif" />


</RelativeLayout>
