<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recette"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fr.esiea.android.projet.mobile.RecetteActivity">


    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_weight="0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/imageViewRecette" />
            <TextView
                android:text="NOM_RECETTE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:id="@+id/titrerecette"
                android:textStyle="normal|bold"
                android:textSize="30sp"
                android:textAlignment="center"
                android:layout_below="@+id/imageViewRecette"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true" />
            <TextView
                android:text="NOM_REGION"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/white"
                android:layout_below="@+id/titrerecette"
                android:id="@+id/nomRegion" />

    </RelativeLayout>

    <RelativeLayout
        android:background="@android:color/holo_red_dark"
        android:padding="4dp"
        android:layout_weight="0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_alignParentLeft="true"
            android:id="@+id/tmpCuisZone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tmpCuisLabel"
                android:text="@string/CuissonMin"/>
            <TextView
                android:textColor="@android:color/white"
                android:textStyle="normal|bold"
                android:layout_toRightOf="@id/tmpCuisLabel"
                android:text="TMP_CUIS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tmpCuis" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_alignParentRight="true"
            android:id="@+id/tmpPrepZone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tmpPrepLabel"
                android:text="@string/PrepMin"/>
            <TextView
                android:textColor="@android:color/white"
                android:textStyle="normal|bold"
                android:layout_toRightOf="@id/tmpPrepLabel"
                android:text="TMP_PREP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tmpPrep" />
        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:padding="4dp"
        android:layout_weight="2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/ingName"
            android:id="@+id/ingName"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

        <TextView
            android:text="INGREDIENTS_TXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingName"
            android:id="@+id/ingredients" />

        <TextView
            android:text="@string/prepName"
            android:id="@+id/prepName"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingredients"
            android:textAlignment="center"/>

        <TextView
            android:text="PREPARATION_TXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/prepName"
            android:id="@+id/preparation" />

    </RelativeLayout>


</LinearLayout>
